/*
    Password Manager: Manages accounts given by user with encrypted password.
    Copyright (C) 2022-2026  Francesco Marras (2004marras@gmail.com)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/gpl-3.0.html.
 */

import java.security.MessageDigest

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'java'
    id 'application'
    id 'signing'

    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'io.franzbecker.gradle-lombok' version '5.0.0'

    // https://github.com/gradlex-org/java-module-dependencies
    id 'org.gradlex.java-module-dependencies' version '1.12.1'

    // https://github.com/petr-panteleyev/jpackage-gradle-plugin
    id 'org.panteleyev.jpackageplugin'

    id 'com.adarshr.test-logger' version '4.0.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation project(':lib')
}

mainModuleInfo {
    annotationProcessor 'lombok'
}

testModuleInfo {
    annotationProcessor 'lombok'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    sourceCompatibility = JavaVersion.VERSION_25
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

// #region Common configuration and utilities

String BUILD_GROUP = "build"
String DISTRIBUTION_GROUP = "distribution"

// https://github.com/controlsfx/controlsfx/wiki/Using-ControlsFX-with-JDK-9-and-above
List<String> defaultJvmArgs = [
    '--enable-native-access=javafx.graphics',
    '--add-exports', 'javafx.base/com.sun.javafx.event=org.controlsfx.controls',
    '-Dapp.name=' + project.appName,
    '-Dapp.version=' + project.appVersion
]

Directory resourceDir = layout.projectDirectory.dir('src/main/resources')
resourceDir.asFile.mkdirs()

Directory compileDir = rootProject.layout.projectDirectory.dir('compiled')
compileDir.asFile.mkdirs()

// #endregion

application {
    // Define the main class for the application.
    mainModule = 'password.manager.app'
    mainClass = 'password.manager.app.App'

    // JVM arguments
    applicationDefaultJvmArgs = defaultJvmArgs
}

testing.suites {
    test {
        useJUnitJupiter '6.0.3'
    }
}

javafx {
    version = '26'
    modules = [ 'javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
}

jar {
    archiveBaseName.set(rootProject.name)
    manifest {
        attributes 'Implementation-Title': project.appName, 'Main-Class': 'password.manager.app.App'
    }
}

///// Packaging tasks and utilities /////

apply from: 'portables.gradle'
apply from: 'installers.gradle'

tasks.register('assembleAll') {
    group = DISTRIBUTION_GROUP

    dependsOn tasks.assemblePortables
    dependsOn tasks.assembleInstallers
}